objects/Model__c.object
<CustomObject>
    <description>デモレポート用機種マスタ</description>
    <fields>
        <fullName>Bu__c</fullName>
        <formula>CASE(Series__c 
, &quot;EM&quot;, &quot;EMU&quot;
, &quot;XM&quot; , &quot;SAU&quot; ,&quot;AP&quot;,&quot;SAU&quot;,&quot;EQ&quot;,&quot;SAU&quot;
,&quot;NM&quot;,&quot;NMU&quot;
,&quot;MS&quot;,&quot;MSU&quot;
,&quot;SM&quot;,&quot;EPU&quot;,&quot;MP&quot;,&quot;EPU&quot;
,&quot;IB&quot;,&quot;EPU&quot;
,&quot;EB&quot;,&quot;SEU&quot;,&quot;SB&quot;,&quot;SEU&quot;
,&quot;BS&quot;,&quot;IEU&quot;,&quot;RF&quot;,&quot;IEU&quot;,&quot;RF&quot;,&quot;IEU&quot;,&quot;TP&quot;,&quot;IEU&quot;
,&quot;CA&quot;,&quot;MED&quot;
, &quot;???&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>形式_外部ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <externalId>true</externalId>
        <label>商品コード</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_English__c</fullName>
        <label>英文名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Japanese__c</fullName>
        <label>漢字名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_edit__c</fullName>
        <formula>CASE( Product_Group__c , &quot;中間(ダミー)親&quot;, Model_English__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>形式(数式)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_End_Date__c</fullName>
        <label>製造中止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>商品区分</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Model__c</fullName>
        <description>集約対象形式</description>
        <label>S_Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_End_Date__c</fullName>
        <label>販売中止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>表示対象</label>
        <type>Checkbox</type>
    </fields>
    <label>機種</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>S_Model__c</columns>
        <columns>Model_English__c</columns>
        <columns>Model_Japanese__c</columns>
        <columns>Series__c</columns>
        <columns>Model_Code__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_End_Date__c</columns>
        <columns>Sales_End_Date__c</columns>
        <columns>sel__c</columns>
        <columns>Bu__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Select All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>形式</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>